# go-git

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  repository_test.go  repository_unix_test.go  worktree_bsd.go  worktree_commit.go  worktree_js.go  worktree_linux.go  worktree_unix_other.go  worktree_windows.go
cli/go-git/: BUILD.bazel
config/: BUILD.bazel
internal/revision/: BUILD.bazel
internal/url/: BUILD.bazel
plumbing/: BUILD.bazel
plumbing/cache/: BUILD.bazel
plumbing/filemode/: BUILD.bazel
plumbing/format/commitgraph/: BUILD.bazel
plumbing/format/config/: BUILD.bazel
plumbing/format/diff/: BUILD.bazel
plumbing/format/gitattributes/: BUILD.bazel
plumbing/format/gitignore/: BUILD.bazel
plumbing/format/idxfile/: BUILD.bazel
plumbing/format/index/: BUILD.bazel
plumbing/format/objfile/: BUILD.bazel
plumbing/format/packfile/: BUILD.bazel
plumbing/format/pktline/: BUILD.bazel
plumbing/hash/: BUILD.bazel
plumbing/object/: BUILD.bazel
plumbing/object/commitgraph/: BUILD.bazel
plumbing/protocol/packp/: BUILD.bazel
plumbing/protocol/packp/capability/: BUILD.bazel
plumbing/protocol/packp/sideband/: BUILD.bazel
plumbing/revlist/: BUILD.bazel
plumbing/storer/: BUILD.bazel
plumbing/transport/: BUILD.bazel
plumbing/transport/client/: BUILD.bazel
plumbing/transport/file/: BUILD.bazel
plumbing/transport/git/: BUILD.bazel
plumbing/transport/http/: BUILD.bazel
plumbing/transport/http/internal/test/: BUILD.bazel
plumbing/transport/internal/common/: BUILD.bazel
plumbing/transport/server/: BUILD.bazel
plumbing/transport/ssh/: BUILD.bazel
plumbing/transport/ssh/internal/test/: BUILD.bazel
plumbing/transport/test/: BUILD.bazel
storage/filesystem/: BUILD.bazel
storage/filesystem/dotgit/: BUILD.bazel
storage/memory/: BUILD.bazel
storage/test/: BUILD.bazel
storage/transactional/: BUILD.bazel
utils/binary/: BUILD.bazel
utils/diff/: BUILD.bazel
utils/ioutil/: BUILD.bazel
utils/merkletrie/: BUILD.bazel
utils/merkletrie/filesystem/: BUILD.bazel
utils/merkletrie/index/: BUILD.bazel
utils/merkletrie/internal/frame/: BUILD.bazel
utils/merkletrie/internal/fsnoder/: BUILD.bazel
utils/merkletrie/noder/: BUILD.bazel
