load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ssh",
    srcs = [
        "auth_method.go",
        "common.go",
    ],
    importpath = "github.com/sgnl-ai/go-git/plumbing/transport/ssh",
    visibility = ["//visibility:public"],
    deps = [
        "//plumbing/transport",
        "//plumbing/transport/internal/common",
        "@com_github_kevinburke_ssh_config//:go_default_library",
        "@com_github_skeema_knownhosts//:go_default_library",
        "@com_github_xanzy_ssh_agent//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
        "@org_golang_x_net//proxy:go_default_library",
    ],
)

go_test(
    name = "ssh_test",
    srcs = [
        "auth_method_test.go",
        "common_test.go",
        "proxy_test.go",
        "upload_pack_test.go",
    ],
    embed = [":ssh"],
    deps = [
        "//plumbing/transport",
        "//plumbing/transport/ssh/internal/test",
        "//plumbing/transport/test",
        "@com_github_armon_go_socks5//:go_default_library",
        "@com_github_gliderlabs_ssh//:go_default_library",
        "@com_github_go_git_go_billy_v5//osfs:go_default_library",
        "@com_github_go_git_go_billy_v5//util:go_default_library",
        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
        "@com_github_kevinburke_ssh_config//:go_default_library",
        "@in_gopkg_check_v1//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
        "@org_golang_x_crypto//ssh/testdata:go_default_library",
    ],
)
