load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filesystem",
    srcs = ["node.go"],
    importpath = "github.com/sgnl-ai/go-git/utils/merkletrie/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "//plumbing",
        "//plumbing/filemode",
        "//utils/merkletrie/noder",
        "@com_github_go_git_go_billy_v5//:go_default_library",
    ],
)

go_test(
    name = "filesystem_test",
    srcs = ["node_test.go"],
    embed = [":filesystem"],
    deps = [
        "//plumbing",
        "//utils/merkletrie",
        "//utils/merkletrie/noder",
        "@com_github_go_git_go_billy_v5//:go_default_library",
        "@com_github_go_git_go_billy_v5//memfs:go_default_library",
        "@in_gopkg_check_v1//:go_default_library",
    ],
)
