load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test",
    srcs = ["test_utils.go"],
    importpath = "github.com/sgnl-ai/go-git/plumbing/transport/ssh/internal/test",
    visibility = ["//plumbing/transport/ssh:__subpackages__"],
    deps = ["@com_github_gliderlabs_ssh//:go_default_library"],
)

go_test(
    name = "test_test",
    srcs = ["proxy_test.go"],
    embed = [":test"],
    deps = [
        "//plumbing/transport",
        "//plumbing/transport/ssh",
        "@com_github_armon_go_socks5//:go_default_library",
        "@com_github_gliderlabs_ssh//:go_default_library",
        "@com_github_go_git_go_git_fixtures_v4//:go_default_library",
        "@in_gopkg_check_v1//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
    ],
)
